# stripchart

./: .gitignore  README.md  pyproject.toml  stripchart.py
src/examples/: example1.py  value_test.py
src/stripchart/: __init__.py  axis.py  chart.py  quantity.py  scale.py  tick.py  trace.py
